[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/List.png" type="Texture" id=1]
[ext_resource path="res://art/False.png" type="Texture" id=2]
[ext_resource path="res://art/Unevaluated.png" type="Texture" id=3]
[ext_resource path="res://art/True.png" type="Texture" id=4]
[ext_resource path="res://art/light.png" type="Texture" id=5]
[ext_resource path="res://Scripts/List.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 71.9414, 64.0454 )

[sub_resource type="CircleShape2D" id=2]
radius = 19.8212

[node name="List" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="NotEvaluated" type="Sprite" parent="."]
position = Vector2( 59.7987, -65 )
texture = ExtResource( 3 )

[node name="True" type="Sprite" parent="."]
position = Vector2( 60, -65 )
texture = ExtResource( 4 )

[node name="False" type="Sprite" parent="."]
position = Vector2( 60, -65 )
texture = ExtResource( 2 )

[node name="Drag" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drag"]
position = Vector2( -0.188416, 12.3511 )
shape = SubResource( 1 )

[node name="ConnectParent" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectParent"]
position = Vector2( 0, -75 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[connection signal="input_event" from="Drag" to="." method="_on_Drag_input_event"]
[connection signal="input_event" from="ConnectParent" to="." method="_on_ConnectParent_input_event"]
[connection signal="mouse_entered" from="ConnectParent" to="." method="_on_ConnectParent_mouse_entered"]
[connection signal="mouse_exited" from="ConnectParent" to="." method="_on_ConnectParent_mouse_exited"]
